<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filterLocationParams"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/type"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/typeEditTextLocation"
        app:layout_constraintEnd_toStartOf="@+id/typeEditTextLocation"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/typeEditTextLocation" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/dimension"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/dimensionEditTextLocation"
        app:layout_constraintEnd_toStartOf="@+id/dimensionEditTextLocation"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dimensionEditTextLocation" />

    <EditText
        android:id="@+id/typeEditTextLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dimensionEditTextLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/typeEditTextLocation"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/typeEditTextLocation" />

    <Button
        android:id="@+id/filterLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dimensionEditTextLocation" />
</androidx.constraintlayout.widget.ConstraintLayout>